V3 Integrate with Asgardeo

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,6 @@
     "baseUrl": "",
     "signInRedirectURL": "http://localhost:3000",
     "signOutRedirectURL": "http://localhost:3000",
-    "scope": ["openid profile"]
+    "scope": ["openid profile"],
+    "weatherApi": ""
 }
